# fyp

./: .gitignore  agent.py  create_db.py  create_db_postgres.py  create_db_txt_pg.py  dev-container.dockerfile  docker-compose.yml  entrypoint.sh  extract_all_fhir_resources.py  few_shot_result.txt  fhir_preprocess.py  fhir_select.py  fhir_select_1.py  fhir_test.py  flake.nix  main.py  observation_modelfile  observation_test  orca_observation  pyproject.toml  query_db.py  query_db_postgres.py  ray_rag.py  requirements.txt  retry.py  summary.py  synth_report_gen.py  test.py  test_model  todo.md  zero_shot_result.txt
src/: agent.py  analyze.py  combined-record.txt  create_db_txt_pg.py  create_questions.py  custom_retriever.py  document_synth_test.py  fhir_select_1.py  mark_pii.py  meas_res_overlap_single.py  meas_res_overlap_synth.py  observation_modelfile  pii_questions.json  pyproject.toml  query_db_postgres.py  questions.json  rag.py  rag_accuracy_both.py  rag_accuracy_keyword.py  rag_accuracy_semantic.py  requirements.txt  search_functions.py  sem_original_synth_response.py  single_agent_test.py  summary.py  summary.txt  synthesis.md  test.py  workflow.py  workflow_single_agent.py
src/create_database/: create_db_postgres.py
src/preprocess_fhir_records/: fhir_test.py
src/query_db/: query_db_postgres.py
src/results/: batch_0.json  (+523 more)
workflow_results/: agent-workflow-results.json  check_file_nodes.py  count_json.py  eval.py  eval_info.py  eval_query.py  eval_response.py  info_score.txt  query_sem.txt  scores.txt  semantic_results.json  single-agent-results.json
(+3645 files in other folders)
